[tool.poetry]
name = "crawlers"
version = "0.1.0"
description = ""
authors = ["Cubricmms"]

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.1"
twisted = "22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
